--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.application.name=commerce-ai
+spring.application.name=sc
 spring.main.web-application-type=none
 spring.main.banner-mode=off
-logging.level.root=info
-logging.level.com.simplecommerce.ai.commerce.ChatbotApplication=off
+logging.level.root=off
 spring.ai.model.chat=ollama
 spring.ai.ollama.chat.options.model=mistral-small3.1
 spring.ai.ollama.chat.options.temperature=0.3
