--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=sc
 spring.main.web-application-type=none
+spring.config.import=optional:file:${user.home}/.sc/config[.yaml]
 spring.main.banner-mode=off
 logging.level.root=off
 spring.ai.model.chat=ollama
+spring.ai.ollama.base-url=${base-url:${ollama.base-url:http://localhost:11434}}
 spring.ai.ollama.chat.options.model=mistral-small3.1
 spring.ai.ollama.chat.options.temperature=0.3
-spring.ai.ollama.init.pull-model-strategy=when-missing
-spring.ai.ollama.init.chat.additional-models=mistral-small,llama3.2,deepseek-r1
+spring.ai.ollama.init.pull-model-strategy=never
