feat: implement 'config'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=sc
 spring.main.web-application-type=none
-spring.config.import=optional:file:${user.home}/.sc/config[.yaml]
+spring.config.import=optional:${sc.config.dir}/config[.yaml]
 spring.main.banner-mode=off
 logging.level.root=off
 spring.ai.model.chat=ollama
@@ -8,3 +8,4 @@ spring.ai.ollama.base-url=${base-url:${ollama.base-url:http://localhost:11434}}
 spring.ai.ollama.chat.options.model=mistral-small3.1
 spring.ai.ollama.chat.options.temperature=0.3
 spring.ai.ollama.init.pull-model-strategy=never
+sc.config.dir=${SC_CONFIG_DIR:file:${user.home}/.sc}
