--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,12 @@ spring.main.web-application-type=none
 spring.config.import=optional:${sc.config.dir}/config[.yaml]
 spring.main.banner-mode=off
 logging.level.root=off
-spring.ai.model.chat=ollama
-spring.ai.ollama.base-url=${base-url:${ollama.base-url:http://localhost:11434}}
+spring.ai.model.chat=${provider:ollama}
+# Load config in order of precedence:
+#   1. CLI argument: --base-url
+#   2. Config file property: providers.{provider}.base-url
+#   3. Default: http://localhost:11434
+spring.ai.ollama.base-url=${base-url:${providers.${spring.ai.model.chat}.base-url:http://localhost:11434}}
 spring.ai.ollama.chat.options.model=mistral-small3.1
 spring.ai.ollama.chat.options.temperature=0.3
 spring.ai.ollama.init.pull-model-strategy=never
