--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'org.graalvm.buildtools.native' version '0.10.6'
 }
 
-group = 'com.simplecommerce.ai'
+group = 'org.simplecommerce.ai'
 version = '0.0.1-SNAPSHOT'
 description = 'Simple Commerce'
 
