feat: store hsqldb on file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,8 @@ spring.ai.ollama.base-url=${base-url:${providers.${spring.ai.model.chat}.base-ur
 spring.ai.ollama.chat.options.model=mistral-small3.1
 spring.ai.ollama.chat.options.temperature=0.3
 spring.ai.ollama.init.pull-model-strategy=never
+spring.ai.chat.memory.repository.jdbc.initialize-schema=always
+spring.datasource.hikari.jdbc-url=${chat-memory.jdbc.url:jdbc:hsqldb:${sc.config.dir}/store.db}
+spring.datasource.hikari.username=ADMIN
+spring.datasource.hikari.password=
 sc.config.dir=${SC_CONFIG_DIR:file:${user.home}/.sc}
