--- a/.sc/config
+++ b/.sc/config
@@ -1,3 +1,4 @@
+$schema: ./schema.json
 provider: ollama
 providers:
   ollama:
@@ -6,4 +7,8 @@ providers:
   openai:
     base-url: https://api.openai.com/v1
     model: gpt-3.5-turbo
-    options: {} # provider-specific options
+    options: { } # provider-specific options
+chat-memory:
+  jdbc:
+    url: jdbc:hsqldb:mem:testdb
+    username: sa
