--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,4 +1,7 @@
 spring:
+  datasource:
+    hikari:
+      jdbc-url: jdbc:hsqldb:mem:testDB
   config:
     import: optional:${sc.config.dir}/config[.yaml]
   ai:
