doc: removed non existing features into a new section of Readme

--- a/src/main/resources/META-INF/native-image/native-image.properties
+++ b/src/main/resources/META-INF/native-image/native-image.properties
@@ -1,1 +1,4 @@
-Args = --initialize-at-run-time=org.springframework.ai.chat.client.advisor.api.BaseAdvisor
+Args = --initialize-at-run-time=org.springframework.ai.chat.client.advisor.api.BaseAdvisor \
+  --enable-native-access=ALL-UNNAMED \
+  --initialize-at-build-time=java.awt.image.BufferedImage,java.awt.image.ColorModel,java.awt.color.ColorSpace,java.awt.Graphics,java.awt.GraphicsEnvironment,sun.awt.FontConfiguration,sun.font.FontManagerFactory,sun.font.SunFontManager,java.awt.ImageCapabilities,sun.font.Font2DHandle,sun.font.SunFontManager$TTFilter,sun.font.SunFontManager$T1Filter,java.awt.image.Raster,java.awt.image.SampleModel,java.awt.image.SinglePixelPackedSampleModel,java.awt.image.DataBufferByte,java.awt.image.DataBuffer,java.awt.image.DataBuffer$1,sun.awt.image.SunWritableRaster,sun.awt.image.ByteBandedRaster,java.awt.image.WritableRaster,java.awt.image.ComponentColorModel,java.awt.image.BandedSampleModel,java.awt.image.PackedColorModel,java.awt.image.DirectColorModel,sun.awt.image.IntegerComponentRaster \
+  -Djava.awt.headless=true
