feat: Include JSON schema in GitHub Pages deployment
- Add schema.json to GitHub Pages build pipeline
- Copy .sc/schema.json to /schemas/schema.json in deployed site
- Update index page to include link to configuration schema
- Modify local build task to include schema files
- Update documentation to reference schema availability
- Schema now accessible at https://juliuskrah.com/sc/schemas/schema.json

The schema provides IDE autocomplete and validation for SC configuration files.

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -137,10 +137,16 @@ jobs:
                       <h3>sc help</h3>
                       <p>Get help for any command</p>
                   </a>
+                  
+                  <a href="schemas/schema.json" class="nav-card">
+                      <h3>Configuration Schema</h3>
+                      <p>JSON Schema for SC configuration files</p>
+                  </a>
               </div>
               
               <div class="footer">
                   <p>Generated from picocli command annotations</p>
+                  <p><small>Schema available at: <a href="schemas/schema.json">schemas/schema.json</a></small></p>
               </div>
           </body>
           </html>
@@ -149,6 +155,11 @@ jobs:
       - name: Copy documentation
         run: |
           cp build/docs/*.html docs-site/
+          
+      - name: Copy schema files
+        run: |
+          mkdir -p docs-site/schemas
+          cp .sc/schema.json docs-site/schemas/schema.json
           
       - name: Setup Pages
         uses: actions/configure-pages@v5
