feat: Complete CI/CD and documentation workflow setup
- Add CI workflow for regression testing on PRs and feature branches
- Update documentation deployment workflow
- Add comprehensive workflow summary documentation
- Set up branch protection with required status checks
- Streamline CI to focus only on testing for PRs

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,7 +1,7 @@
 name: Deploy Documentation to GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pushes to main branch only (after PR merges)
   push:
     branches: ["main"]
 
