--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'org.graalvm.buildtools.native' version '0.10.6'
 	id 'org.asciidoctor.jvm.convert' version '4.0.3'
+	id 'org.openrewrite.rewrite' version '7.9.0'
 }
 
-group = 'org.simplecommerce.ai'
+group = 'org.sc.ai'
 version = '0.0.1-SNAPSHOT'
 description = 'sc cli - simple ai for everyday people'
 
@@ -51,6 +52,10 @@ dependencies {
 	testImplementation 'org.springframework.ai:spring-ai-spring-boot-testcontainers'
 	testImplementation 'org.testcontainers:ollama:1.21.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    
+    // OpenRewrite dependencies
+    rewrite 'org.openrewrite.recipe:rewrite-java:8.45.4'
+    rewrite 'org.openrewrite.recipe:rewrite-spring:5.24.0'
 }
 
 dependencyManagement {
@@ -83,7 +88,7 @@ task generateManpageAsciiDoc(type: JavaExec) {
     description = "Generate AsciiDoc manpage"
     classpath = configurations.generateConfig + sourceSets.main.runtimeClasspath
     mainClass = 'picocli.codegen.docgen.manpage.ManPageGenerator'
-    args 'org.simplecommerce.ai.commerce.command.DocumentationTopCommand', "--outdir=${project.buildDir}/generated-picocli-docs", "-v"
+    args 'org.sc.ai.cli.command.DocumentationTopCommand', "--outdir=${project.buildDir}/generated-picocli-docs", "-v"
 }
 
 task generateManpageTemplates(type: JavaExec) {
@@ -92,7 +97,7 @@ task generateManpageTemplates(type: JavaExec) {
     description = "Generate AsciiDoc manpage templates (run only once to create templates)"
     classpath = configurations.generateConfig + sourceSets.main.runtimeClasspath
     mainClass = 'picocli.codegen.docgen.manpage.ManPageGenerator'
-    args 'org.simplecommerce.ai.commerce.command.DocumentationTopCommand', 
+    args 'org.sc.ai.cli.command.DocumentationTopCommand', 
          "--outdir=${project.buildDir}/generated-picocli-docs", 
          "--template-dir=src/docs/man-templates",
          "--force",
@@ -110,12 +115,12 @@ task generateEnhancedDocs(type: JavaExec) {
         def templatesDir = file("src/docs/man-templates")
         if (templatesDir.exists() && templatesDir.listFiles().length > 0) {
             println "Using existing templates from: ${templatesDir}"
-            args 'org.simplecommerce.ai.commerce.command.DocumentationTopCommand', 
+            args 'org.sc.ai.cli.command.DocumentationTopCommand', 
                  "--outdir=${project.buildDir}/generated-picocli-docs", 
                  "-v"
         } else {
             println "No templates found, using standard generation"
-            args 'org.simplecommerce.ai.commerce.command.DocumentationTopCommand', 
+            args 'org.sc.ai.cli.command.DocumentationTopCommand', 
                  "--outdir=${project.buildDir}/generated-picocli-docs", 
                  "-v"
         }
@@ -182,5 +187,31 @@ graalvmNative {
     }
     metadataRepository {
         enabled = true
+    }
+}
+
+rewrite {
+    activeRecipe 'com.simplecommerce.ai.commerce.PackageMigrationRecipe'
+    configFile = file('rewrite.yml')
+}
+
+task migratePackages {
+    dependsOn 'rewriteRun'
+    group = "Migration"
+    description = "Migrate package structure from org.simplecommerce.ai.commerce to org.sc.ai.cli"
+    doLast {
+        println "Package migration completed!"
+        println "Please review the changes and run './gradlew clean build' to verify everything works correctly."
+    }
+}
+
+task previewPackageMigration {
+    dependsOn 'rewriteDryRun'
+    group = "Migration"
+    description = "Preview package migration changes without applying them"
+    doLast {
+        println "Migration preview completed!"
+        println "Review the output above to see what changes would be made."
+        println "Run './gradlew migratePackages' to apply the changes."
     }
 }
