--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.ai.chat.memory.repository.jdbc.initialize-schema=always
 spring.datasource.hikari.jdbc-url=${chat-memory.jdbc.url:jdbc:hsqldb:${sc.config.dir}/store.db}
 spring.datasource.hikari.username=ADMIN
 spring.datasource.hikari.password=
-sc.config.dir=${SC_CONFIG_DIR:file:${user.home}/.sc}
+sc.config.dir=${SC_CONFIG_DIR:${user.home}/.sc}
