--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -12,7 +12,7 @@ spring:
         pull-model-strategy: never
 sc:
   config:
-    dir: ${SC_CONFIG_DIR:file:${user.dir}/.sc}
+    dir: ${SC_CONFIG_DIR:${user.dir}/.sc}
 logging:
   level:
     root: info
