feat: implement spinner for chat responses
- Add Spinner class with delayed start to avoid flickering on fast responses
- Integrate spinner into ChatCommand.streamModelResponse() method
- Add comprehensive tests for Spinner class and integration
- Spinner shows 'Thinking...' message while waiting for AI model responses
- Automatically clears spinner when response starts arriving
- Handles errors and interruptions gracefully

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.ai:spring-ai-spring-boot-testcontainers'
 	testImplementation 'org.testcontainers:ollama:1.21.0'
+    implementation 'org.awaitility:awaitility'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     
     // OpenRewrite dependencies
