feat: Convert project to Java Platform Module System (JPMS)
- Switch from java to java-library plugin for better module support
- Enable modularity.inferModulePath for proper module path handling
- Add empty module-info.java as starting point for JPMS
- Configure JLine dependencies properly for module compatibility
- Move awaitility to testImplementation scope
- Improve dependency management with api vs implementation

This prepares the project for full JPMS modularization while
maintaining compatibility with the existing Spring Boot ecosystem.

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'java'
+	id 'java-library'
 	id 'org.springframework.boot' version '3.5.3'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'org.graalvm.buildtools.native' version '0.10.6'
@@ -15,6 +15,7 @@ java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(22)
 	}
+	modularity.inferModulePath = true
 }
 
 repositories {
@@ -33,25 +34,25 @@ configurations {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation('org.springframework.ai:spring-ai-starter-model-ollama') {
+    api 'org.springframework.boot:spring-boot-starter'
+    api('org.springframework.ai:spring-ai-starter-model-ollama') {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-webflux'
     }
-	implementation 'org.springframework.ai:spring-ai-starter-model-chat-memory-repository-jdbc'
-	implementation 'org.springframework.ai:spring-ai-pdf-document-reader'
-	implementation 'org.springframework.ai:spring-ai-markdown-document-reader'
-	implementation 'org.springframework.ai:spring-ai-jsoup-document-reader'
-	implementation "org.jline:jline:${jlineVersion}"
-	implementation "org.jline:jline-terminal-ffm:${jlineVersion}"
-	implementation "org.jline:jline-terminal-jni:${jlineVersion}"
-    implementation "info.picocli:picocli-spring-boot-starter:${picocliVersion}"
-	implementation "info.picocli:picocli-shell-jline3:${picocliVersion}"
+	api 'org.springframework.ai:spring-ai-starter-model-chat-memory-repository-jdbc'
+	api 'org.springframework.ai:spring-ai-pdf-document-reader'
+	api 'org.springframework.ai:spring-ai-markdown-document-reader'
+	api 'org.springframework.ai:spring-ai-jsoup-document-reader'
+	api "org.jline:jline:${jlineVersion}"
+	api "org.jline:jline-terminal-ffm:${jlineVersion}"
+	api "org.jline:jline-terminal-jni:${jlineVersion}"
+    api "info.picocli:picocli-spring-boot-starter:${picocliVersion}"
+	api "info.picocli:picocli-shell-jline3:${picocliVersion}"
 	annotationProcessor "info.picocli:picocli-codegen:${picocliVersion}"
     generateConfig "info.picocli:picocli-codegen:${picocliVersion}"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.ai:spring-ai-spring-boot-testcontainers'
 	testImplementation 'org.testcontainers:ollama:1.21.0'
-    implementation 'org.awaitility:awaitility'
+    testImplementation 'org.awaitility:awaitility'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     
     // OpenRewrite dependencies
@@ -79,8 +80,22 @@ springBoot {
 	}
 }
 
+jar {
+    manifest {
+        attributes('Automatic-Module-Name': 'org.sc.ai.cli')
+    }
+    archiveClassifier = 'plain'
+}
+
+bootJar {
+    manifest {
+        attributes('Automatic-Module-Name': 'org.sc.ai.cli')
+    }
+}
+
 compileJava {
     options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
+    options.javaModuleVersion = provider { version }
 }
 
 task generateManpageAsciiDoc(type: JavaExec) {
