feat: implement automated release and tagging with JReleaser
- Add JReleaser and semver Gradle plugins
- Configure multi-platform native image builds for Linux, macOS, Windows
- Add GitHub Actions workflow for automated releases
- Support alpha, beta, rc, and final release stages
- Add package manager support (Homebrew, Scoop, Chocolatey)
- Include release helper script and documentation
- Configure semantic versioning with v prefix
- Add comprehensive release documentation

Platforms supported:
- Linux x86_64
- macOS x86_64 (Intel) and aarch_64 (Apple Silicon)
- Windows x86_64

Release process:
- Manual workflow dispatch with stage/scope selection
- Automatic releases on git tag push
- Multi-platform native image compilation
- GitHub releases with binaries and changelog

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,16 @@ out/
 ### VS Code ###
 .vscode/
 !.vscode/mcp.json
+
+### JReleaser ###
+out/
+
+### Release artifacts ###
+*.zip
+*.tar.gz
+*.deb
+*.rpm
+*.dmg
+*.pkg
+*.msi
+*.exe.sig
