fix: update release helper script and JReleaser config
- Disable local JReleaser testing due to dependency conflicts
- Add simple files configuration for artifact upload
- Update helper script to use manual tag creation
- Add guidance for GitHub Actions testing workflow
- Configure for alpha release workflow

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
 org.gradle.jvmargs='--enable-native-access=ALL-UNNAMED'
+
+# Semver configuration for alpha releases
+semver.stage=alpha
+semver.scope=auto
